--- a/debian/control
+++ b/debian/control
@@ -193,6 +193,7 @@ Breaks: mariadb-client-10.0 (<< 10.0.24-6~),
         mariadb-client-core-10.0,
         mariadb-client-core-10.1,
         mariadb-client-core-10.2,
+        mariadb-client-core-10.3,
         mariadb-client-core-5.5,
         mysql-client-core-5.5,
         mysql-client-core-5.6,
@@ -202,6 +203,7 @@ Replaces: mariadb-client-10.0 (<< 10.0.24-6~),
           mariadb-client-core-10.0,
           mariadb-client-core-10.1,
           mariadb-client-core-10.2,
+          mariadb-client-core-10.3,
           mariadb-client-core-5.5,
           mysql-client-core-5.5,
           mysql-client-core-5.6,
@@ -234,6 +236,7 @@ Conflicts: mysql-client-core-5.5,
 Breaks: mariadb-client-10.0,
         mariadb-client-10.1,
         mariadb-client-10.2,
+        mariadb-client-10.3,
         mariadb-client-5.5,
         mariadb-server-10.0 (<< 10.0.13-1~),
         mysql-client-5.5,
@@ -243,6 +246,7 @@ Breaks: mariadb-client-10.0,
 Replaces: mariadb-client-10.0,
           mariadb-client-10.1,
           mariadb-client-10.2,
+          mariadb-client-10.3,
           mariadb-client-5.5,
           mariadb-server-10.0 (<< 10.0.13-1~),
           mysql-client-5.5,
@@ -278,10 +282,12 @@ Conflicts: mariadb-galera-server-5.5,
 Breaks: mariadb-client-10.1,
         mariadb-server-10.1,
         mariadb-server-10.2,
+        mariadb-server-10.3,
         mariadb-server-10.3 (<< 1:10.3.13-2),
         mariadb-server-core-10.0,
         mariadb-server-core-10.1,
         mariadb-server-core-10.2,
+        mariadb-server-core-10.3,
         mariadb-server-core-5.5,
         mysql-client-5.5,
         mysql-client-5.6,
@@ -292,10 +298,12 @@ Breaks: mariadb-client-10.1,
 Replaces: mariadb-client-10.1,
           mariadb-server-10.1,
           mariadb-server-10.2,
+          mariadb-server-10.3,
           mariadb-server-10.3 (<< 1:10.3.13-2),
           mariadb-server-core-10.0,
           mariadb-server-core-10.1,
           mariadb-server-core-10.2,
+          mariadb-server-core-10.3,
           mariadb-server-core-5.5,
           mysql-client-5.5,
           mysql-client-5.6,
@@ -355,6 +363,7 @@ Breaks: cqrlog (<< 1.9.0-5~),
         mariadb-server-10.0,
         mariadb-server-10.1,
         mariadb-server-10.2,
+        mariadb-server-10.3,
         mariadb-server-5.5,
         mariadb-tokudb-engine-10.0,
         mariadb-tokudb-engine-10.1,
@@ -371,6 +380,7 @@ Replaces: mariadb-galera-server,
           mariadb-server-10.0,
           mariadb-server-10.1,
           mariadb-server-10.2,
+          mariadb-server-10.3,
           mariadb-server-5.5,
           mariadb-tokudb-engine-10.0,
           mariadb-tokudb-engine-10.1,
@@ -421,9 +431,11 @@ Package: mariadb-backup
 Architecture: any
 Breaks: mariadb-backup-10.1,
         mariadb-backup-10.2,
+        mariadb-backup-10.3,
         mariadb-client-10.1
 Replaces: mariadb-backup-10.1,
           mariadb-backup-10.2,
+          mariadb-backup-10.3,
           mariadb-client-10.1
 Depends: mariadb-client-core-10.4 (= ${binary:Version}),
          ${misc:Depends},
