--- a/debian/control
+++ b/debian/control
@@ -118,13 +118,13 @@ Section: libs
 Depends: mariadb-common,
          ${misc:Depends},
          ${shlibs:Depends}
-Conflicts: mariadb-galera-server-10.0 (<< 10.0.5),
-           mariadb-galera-server-5.5 (<< 5.5.33),
-           mariadb-server-10.0 (<< 10.0.5),
+Conflicts: mariadb-galera-server-10.0,
+           mariadb-galera-server-5.5,
+           mariadb-server-10.0,
            mariadb-server-5.1,
            mariadb-server-5.2,
            mariadb-server-5.3,
-           mariadb-server-5.5 (<< 5.5.33)
+           mariadb-server-5.5
 Breaks: libmariadbclient18
 Replaces: libmariadbclient18
 Description: MariaDB database client library
@@ -189,7 +189,7 @@ Conflicts: mysql-client-5.5,
            mysql-client-5.7,
            mysql-client-8.0,
            virtual-mysql-client-core
-Breaks: mariadb-client-10.0 (<< 10.0.24-6~),
+Breaks: mariadb-client-10.0,
         mariadb-client-core-10.0,
         mariadb-client-core-10.1,
         mariadb-client-core-10.2,
@@ -199,7 +199,7 @@ Breaks: mariadb-client-10.0 (<< 10.0.24-6~),
         mysql-client-core-5.6,
         mysql-client-core-5.7,
         mysql-client-core-8.0
-Replaces: mariadb-client-10.0 (<< 10.0.24-6~),
+Replaces: mariadb-client-10.0,
           mariadb-client-core-10.0,
           mariadb-client-core-10.1,
           mariadb-client-core-10.2,
@@ -238,7 +238,7 @@ Breaks: mariadb-client-10.0,
         mariadb-client-10.2,
         mariadb-client-10.3,
         mariadb-client-5.5,
-        mariadb-server-10.0 (<< 10.0.13-1~),
+        mariadb-server-10.0,
         mysql-client-5.5,
         mysql-client-5.6,
         mysql-client-5.7,
@@ -248,7 +248,7 @@ Replaces: mariadb-client-10.0,
           mariadb-client-10.2,
           mariadb-client-10.3,
           mariadb-client-5.5,
-          mariadb-server-10.0 (<< 10.0.13-1~),
+          mariadb-server-10.0,
           mysql-client-5.5,
           mysql-client-5.6,
           mysql-client-5.7,
@@ -283,7 +283,6 @@ Breaks: mariadb-client-10.1,
         mariadb-server-10.1,
         mariadb-server-10.2,
         mariadb-server-10.3,
-        mariadb-server-10.3 (<< 1:10.3.13-2),
         mariadb-server-core-10.0,
         mariadb-server-core-10.1,
         mariadb-server-core-10.2,
@@ -299,7 +298,6 @@ Replaces: mariadb-client-10.1,
           mariadb-server-10.1,
           mariadb-server-10.2,
           mariadb-server-10.3,
-          mariadb-server-10.3 (<< 1:10.3.13-2),
           mariadb-server-core-10.0,
           mariadb-server-core-10.1,
           mariadb-server-core-10.2,
