--- a/debian/rules
+++ b/debian/rules
@@ -54,6 +54,14 @@ ifneq ($(DEB_HOST_ARCH),amd64)
     CMAKEFLAGS += -DWITHOUT_TOKUDB=true
 endif
 
+# Add extra flag to avoid WolfSSL code crashing the entire mysqld on s390x. This
+# can be removed once upstream has made the code s390x compatible, see
+# https://jira.mariadb.org/browse/MDEV-21705 and
+# https://github.com/wolfSSL/wolfssl/issues/2828
+ifeq ($(DEB_HOST_ARCH),s390x)
+    CFLAGS += -DWC_NO_CACHE_RESISTANT
+endif
+
 # Add support for verbose builds
 MAKEFLAGS += VERBOSE=1
 
@@ -101,7 +109,7 @@ endif
 	    -DINSTALL_PLUGINDIR=lib/$(DEB_HOST_MULTIARCH)/mariadb19/plugin \
 	    -DINSTALL_MYSQLTESTDIR=share/mysql/mysql-test \
 	    -DPLUGIN_AUTH_SOCKET=STATIC \
-			-DWITH_SSL=bundled \
+	    -DWITH_SSL=bundled \
 	    -DPLUGIN_AWS_KEY_MANAGEMENT=NO \
 	    -DWITH_INNODB_SNAPPY=ON \
 	    -DDEB=$(DEB_VENDOR) ..'
