--- a/debian/control
+++ b/debian/control
@@ -157,8 +157,10 @@ Depends: libmariadb-dev (= ${binary:Version}),
          libmariadbd19 (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Breaks: libmysqld-dev
-Replaces: libmysqld-dev
+Breaks: libmariadb-dev (<< 1:10.4),
+        libmysqld-dev
+Replaces: libmariadb-dev (<< 1:10.4),
+          libmysqld-dev
 Description: MariaDB embedded database, development files
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
