--- a/debian/control
+++ b/debian/control
@@ -23,8 +23,7 @@ Build-Depends: bison,
                libncurses5-dev (>= 5.0-6~),
                libpam0g-dev,
                libpcre3-dev (>= 2:8.35-3.2~),
-               libreadline-gplv2-dev,
-               libreadline-gplv2-dev:native,
+               libedit-dev,
                libsnappy-dev,
                libsystemd-dev [linux-any],
                libxml2-dev,
