--- a/debian/rules
+++ b/debian/rules
@@ -156,6 +156,9 @@ endif
 	# Delete private files from libraries so they don't get shipped in the -dev pacakges
 	rm -r $(TMP)/usr/include/mariadb/server/private
 
+	# Don't ship sql-bench at all, just delete it completely even though it builds
+	rm -r $(TMP)/usr/sql-bench
+
 	# Remove test plugins
 	rm -f $(TMP)/usr/lib/*/mariadb19/plugin/adt_null.so
 	rm -f $(TMP)/usr/lib/*/mariadb19/plugin/auth_0x0100.so
