Update package to use debhelper level 10
Level 10 is supported since Ubuntu 18.04 Bionic and Debian Stretch,
which can be considered the minimum for all new/future software.
Only Debian Jesse and Ubuntu Xenial are at compat level 9 anymore.

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: bison,
                chrpath,
                cmake,
                cracklib-runtime,
-               debhelper (>= 9.20160709),
+               debhelper (>= 10),
                dh-apparmor,
                dh-exec,
                gdb,
