Install arch dependent mariadb.pc in lib/ with patch from upstream

--- a/debian/rules
+++ b/debian/rules
@@ -104,10 +104,9 @@ endif
 	    -DMYSQL_SERVER_SUFFIX="-$(DEB_VERSION_REVISION)" \
 	    -DSYSTEM_TYPE="debian-$(DEB_HOST_GNU_SYSTEM)" \
 	    -DCMAKE_SYSTEM_PROCESSOR=$(DEB_HOST_ARCH) \
+			-DCMAKE_CXX_LIBRARY_ARCHITECTURE=$(DEB_HOST_MULTIARCH) \
 	    -DBUILD_CONFIG=mysql_release \
-	    -DINSTALL_LIBDIR=lib/$(DEB_HOST_MULTIARCH) \
 	    -DINSTALL_PLUGINDIR=lib/$(DEB_HOST_MULTIARCH)/mariadb19/plugin \
-	    -DINSTALL_MYSQLTESTDIR=share/mysql/mysql-test \
 	    -DWITH_SSL=bundled \
 	    -DPLUGIN_AWS_KEY_MANAGEMENT=NO \
 	    -DWITH_INNODB_SNAPPY=ON \
